--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-51061112-1', 'getveria.com');
+	  ga('create', 'UA-51061112-1', 'veriacms.com');
 	  ga('send', 'pageview');
 
 	</script>
