add social share buttons

--- a/index.html
+++ b/index.html
@@ -54,10 +54,15 @@
       }
 
       .subheader {
-        height: 10px;
+        height: 50px;
         background: #f7f7f7;
         display: block;
       }
+	  
+	  .subheader > iframe {
+		height: 35px !important;
+		width: 80px !important;
+	  }
       
       h1, h2, h3 {
         font-weight: 300;
@@ -100,7 +105,16 @@
 	
   </head>
   <body>
-    
+
+	<div id="fb-root"></div>
+	<script>(function(d, s, id) {
+	  var js, fjs = d.getElementsByTagName(s)[0];
+	  if (d.getElementById(id)) return;
+	  js = d.createElement(s); js.id = id;
+	  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+	  fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));</script>
+  
     <div class="header">
       <h1>
 		Veria CMS
@@ -113,6 +127,9 @@
 	</h3>
     </div>
     <div class="subheader">
+	<div class="fb-like" data-href="http://veriacms.com" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://veriacms.com">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
 	
     <span>
