added gh buttons

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       }
 
       .subheader {
-        height: 50px;
         background: #f7f7f7;
         display: block;
+		height: auto;
       }
 	  
 	  .subheader > iframe {
@@ -129,7 +129,14 @@
     <div class="subheader">
 	<div class="fb-like" data-href="http://veriacms.com" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
 	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://veriacms.com">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+
+	
+<iframe src="github-btn.html?user=stevepapa&repo=veria&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="104px" height="20px"></iframe>
+
+<iframe src="github-btn.html?user=stevepapa&repo=veria&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+
+	
     </div>
 	
     <span>
@@ -296,6 +303,15 @@
 		</center>
     </span>
 
+	<div class="subheader">
+	<div class="fb-like" data-href="http://veriacms.com" data-layout="button_count" data-action="like" data-show-faces="false" data-share="true"></div>
+	<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://veriacms.com">Tweet</a>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	<iframe src="github-btn.html?user=stevepapa&repo=veria&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="104px" height="20px"></iframe>
+	<iframe src="github-btn.html?user=stevepapa&repo=veria&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+
+    </div>
+	
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
