Update header text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:title" content="Veria CMS, A lightweight blogging platform powered by Node.js">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://veriacms.com">
-	<meta property="og:description" content="Create your own beautiful and responsive blog in minutes using Veria CMS. It's powered by node.js and uses markdown to produce beautiful blog posts that look great on mobile devices and desktop!">	
+	<meta property="og:description" content="Create your own beautiful blog in minutes using Veria CMS. It's powered by node.js and uses markdown to produce beautiful blog posts that look great on mobile devices and desktop!">	
 	<meta property="og:image" content="http://veriacms.com/veria-nodejs-blog-cms.png">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
@@ -125,7 +125,7 @@
         node.js
       </b>
 	</h3>
-<h2><b>Have your Node.js blog up and running in less than five minutes.</b>
+<h2><b>Have your own Node.js powered blog up and running in 60 seconds.</b>
 </h2>    </div>
     <div class="subheader"><br>
 <a href="https://github.com/stevepapa/veria"><b>On Github</b></a>
