add dashboard link

--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
         <img src="veria-nodejs-blog-cms.png">
       </center>
     </span>
-    
+    <br>      <center>
+	<h2><b><a href="http://demo.veriacms.com">Demo: Example blog</a></b></h2>
+	<h2><b><a href="http://demo.veriacms.com/dashboard">Demo: Admin Dashboard</a></b></h2>
+<br>
+      </center>
     <span>
       <h2>
         Get started easily!
